--- a/html/formularioEstudiante.html
+++ b/html/formularioEstudiante.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/estudianteEstilo.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
@@ -13,22 +12,21 @@
     <div id="myAppF">
         <div class="container">
             <div class="Formulario">
-                <header>Estudiante</header>
-
+                <header></header>
                 <section class="formulario-contenedor">
                     <!-- Formulario-->
                     <h2>Formulario</h2>
-                    <p type="Nombre:"><input v-model="nombre" type="text"></p>
-                    <p type="Apellido:"><input v-model="apellido" type="text"></p>
-                    <p type="Hobby:"><input v-model="Hobby" type="text"></p>
-                    <p type="Fecha Nacimiento:"><input v-model="fechaNacimiento" type="date"></p>
-                    
+                    <p>Nombre: <input v-model="nombre" type="text"></p>
+                    <p>Apellido: <input v-model="Hobby" type="text"></p>
+                    <p>Fecha Nacimiento: <input v-model="fechaNacimiento" type="date"></p>
+                    <p>Hobby: <input v-model="apellido" type="text"></p>
+
                     <div class="button-container">
                         <button v-on:click="agregarLista">Guardar</button>
                     </div>
                     <ul>
                         <li v-for="item in listaformulario">
-                            {{ item.nombre }} - {{ item.apellido }} - {{ item.Hobby }} - {{ item.fechaNacimiento }}  
+                            {{ item.nombre }} - {{ item.apellido }} - {{ item.Hobby }} - {{ item.fechaNacimiento }}
                         </li>
                     </ul>
                 </section>
